# pyreqwest

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark_performance.py  clippy.toml  index.html  pyproject.toml  pyreqwest.html  search.js
.github/workflows/: ci.yml  gen_docs.yml
docs/: free_threading.md
examples/: _utils.py  auth.py  basic_client.py  cookies.py  json_usage.py  middleware.py  multipart.py  stream.py
pyreqwest/: _pyreqwest.html  bytes.html  client.html  cookie.html  exceptions.html  http.html  middleware.html  multipart.html  proxy.html  pytest_plugin.html  request.html  response.html  types.html
pyreqwest/client/: types.html
python/pyreqwest/: __init__.py  bytes.pyi  client.pyi  exceptions.pyi  multipart.pyi  pytest_mock.py  request.pyi  response.pyi  types.py
python/pyreqwest/client/: __init__.py  __init__.pyi  types.py
python/pyreqwest/cookie/: __init__.py  __init__.pyi  types.py
python/pyreqwest/exceptions/: __init__.py
python/pyreqwest/http/: __init__.py  __init__.pyi  types.py
python/pyreqwest/http/cookie/: __init__.py  __init__.pyi
python/pyreqwest/middleware/: __init__.py  __init__.pyi  types.py
python/pyreqwest/middleware/asgi/: __init__.py  asgi.py
python/pyreqwest/multipart/: __init__.py  __init__.pyi
python/pyreqwest/proxy/: __init__.py  __init__.pyi
python/pyreqwest/pytest_plugin/: README.md  __init__.py  internal.py  mock.py  plugin.py  types.py
python/pyreqwest/pytest_plugin/internal/: assert_message.py  matcher.py
python/pyreqwest/request/: __init__.py  __init__.pyi
python/pyreqwest/response/: __init__.py  __init__.pyi
src/: asyncio.rs  client.rs  client_builder.rs  http_types.rs  lib.rs  middleware.rs  multipart_form.rs  proxy_config.rs  request.rs  request_builder.rs  request_wrapper.rs  response.rs  runtime.rs  utils.rs
src/client/: client.rs  client_builder.rs  connection_limiter.rs  mod.rs  runtime.rs  spawner.rs
src/client/internal/: mod.rs  spawner.rs
src/cookie/: cookie_store.rs  mod.rs
src/exceptions/: exceptions.rs  mod.rs  utils.rs
src/http/: body.rs  mime.rs  mod.rs  request_body.rs  types.rs  url.rs  utils.rs
src/http/cookie/: cookie.rs  cookie_builder.rs  cookie_store.rs  mod.rs
src/http/header_map/: header_map.rs  iters.rs  mod.rs  views.rs
src/http/internal/: body_stream.rs  json.rs  mod.rs  types.rs
src/internal/: body_stream.rs  types.rs
src/middleware/: middleware.rs  middleware_request.rs  mod.rs  next.rs  response_dict.rs
src/multipart/: form.rs  form_builder.rs  mod.rs  part.rs  part_builder.rs
src/proxy/: proxy.rs  proxy_builder.rs
src/request/: connection_limiter.rs  consumed_request.rs  mod.rs  request.rs  request_body.rs  request_builder.rs  request_wrapper.rs  stream_request.rs
src/response/: body_read_channel.rs  body_reader.rs  bytes_channel.rs  mod.rs  response.rs  response_body_reader.rs  response_builder.rs
src/response/internal/: body_reader.rs
tests/: conftest.py  test_blocking.py  test_client.py  test_cookie.py  test_cookie_provider.py  test_examples.py  test_header_map.py  test_middleware.py  test_middleware_asgi_client.py  test_mime.py  test_multipart.py  test_proxy.py  test_pytest_mock.py  test_pytest_plugin_external.py  test_request.py  test_request_builder.py  test_response.py  test_stream.py  test_sync.py  test_url.py  utils.py
tests/__snapshots__/: test_examples.ambr  test_pytest_mock.ambr  test_request.ambr
tests/bench/: benchmark_performance.py
tests/pytest_mock/: test_mock.py  test_mock_assert.py  test_plugin_external.py
tests/pytest_mock/__snapshots__/: test_mock_assert.ambr
tests/servers/: echo_body_parts_server.py  echo_server.py  server.py  server_pool.py  server_subprocess.py
