[package]
name = "pyreqwest"
version = "1.0.0"
edition = "2024"

[lib]
name = "pyreqwest"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "=0.12.22", features = ["default", "rustls-tls", "blocking", "cookies", "gzip", "zstd", "brotli", "deflate", "multipart", "stream", "socks"] }
pythonize = "=0.25.0"
pyo3-bytes = "=0.3.0"
http = "=1.3.1"
http-serde = "=2.1.1"
tokio = { version = "=1.46.1", features = ["rt", "time", "sync", "macros"] }
futures-util = "=0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
bytes = "=1.10.1"
url = { version = "=2.5.4", features = ["serde"] }

[build-dependencies]
pyo3-build-config = "=0.25.1"

[dependencies.pyo3]
version = "=0.25.1"
features = ["extension-module", "experimental-async", "abi3-py311"]
