[project]
name = "pyreqwest"
version = "0.1.0"
authors = [
    { name = "Markus Sintonen", email = "pyreqwest@gmail.com" }
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [] # Pure Rust project, no Python dependencies

[project.entry-points.pytest11]
pyreqwest = "pyreqwest.pytest_plugin.plugin"

[dependency-groups]
dev = [
    "maturin==1.9.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "granian==2.4.1",
    "asgi-types==0.1.0",
    "trustme==1.2.1",
    "orjson==3.10.18",
    "requests-toolbelt==1.0.0",
    "syrupy==4.9.1",
    "ruff==0.12.10",
    # Compatibility with other libraries
    "dirty-equals==0.9.0",
    "yarl==1.20.1",
    "multidict==6.6.3",
    "starlette==0.47.3",
]

[tool.maturin]
module-name = "pyreqwest._pyreqwest"
python-source = "python"
python-packages = ["pyreqwest"]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["FBT003", "TC003"]

[tool.ruff.lint.per-file-ignores]
"./tests/*" = [
    "D",
    "B011",
    "S101",
    "S105",
    "ANN201",
    "ANN401",
    "PT018",
    "SIM201",
    "SIM202",
    "PLR2004",
    "EM101",
    "TRY003",
    "TRY002",
    "FBT001",
    "FBT002",
    "C414",
    "C901",
]
