[project]
name = "pyreqwest"
version = "0.1.0"
authors = [
    { name = "Markus Sintonen", email = "pyreqwest@gmail.com" }
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [] # Pure Rust project, no Python dependencies

[project.entry-points.pytest11]
pyreqwest = "pyreqwest.pytest_plugin.plugin"

[dependency-groups]
dev = [
    "maturin==1.9.4",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "granian==2.4.1",
    "asgi-types==0.1.0",
    "trustme==1.2.1",
    "orjson==3.10.18",
    "requests-toolbelt==1.0.0",
    "syrupy==4.9.1",
    "ruff==0.12.10",
    "mypy==1.17.1",
    "pydantic==2.11.9",
    # Compatibility checks with other libraries
    "dirty-equals==0.9.0",
    "yarl==1.20.1",
    "multidict==6.6.3",
    "starlette==0.47.3",
    # Perf comparison
    "aiohttp==3.12.15",
    "httpx==0.28.1",
    "urllib3==2.5.0",
    "matplotlib==3.10.6",
    # Documentation
    "pdoc==15.0.4"
]

[tool.maturin]
module-name = "pyreqwest._pyreqwest"
python-source = "python"
python-packages = ["pyreqwest"]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FBT",
    "TC003",
    "PYI002",  # Not compatible with pdoc
    "PYI020",  # Not compatible with pdoc
    "PYI021",
    "ANN401",
    "PLC0414",
    "S101",
    "PT018",
    "D203",
    "D205",
    "D213",
    "D418",
    "COM812",  # Formatter conflict
    "TRY300",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"./python/pyreqwest/pytest_plugin/*" = ["SLF001", "PLC0415"]
"./python/pyreqwest/pytest_plugin/internal/*" = ["D"]
"./tests/*" = [
    "D",
    "B011",
    "S101",
    "S105",
    "S311",
    "ANN201",
    "ANN401",
    "PT018",
    "SIM201",
    "SIM202",
    "PLR2004",
    "EM101",
    "TRY003",
    "TRY002",
    "C414",
    "C901",
    "TC002",
    "BLE001",
    "T201",
    "SLF001",
]
"./tests/bench/*" = ["T201", "EM102", "PLC0415", "TC002"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "no-untyped-def"
